--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -35,8 +35,11 @@ footer {
   margin: auto;
   padding-bottom: 10px;
   font-size: 12px;
-  position: absolute;
   bottom: 0;
+}
+
+footer li {
+  float: left;
 }
 
 html {
