--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,24 @@
   <body>
     <header>
       <ul>
-        <li><a href="#">Bootstrapテキストページ</a></li>
-        <li><a href="#">トップページ</a></li>
+        <li><a href="#">ホーム</a></li>
+        <li><a href="#">通知</a></li>
+        <li><a href="#">メッセージ</a></li>
+        <li><a href="#">見つける</a></li>
       </ul>
     </header>
 
     <%= yield %>
 
     <footer>
-      <p>運営会社DIVE INTO CODE株式会社</p>
-      <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
+      <nav class="navbar navbar-default">
+        <div class="navbar-header">
+          <li class="navbar-toggle collapsed"><a href="#">タイムライン</a></li>
+          <li><a href="#">通知</a></li>
+          <li><a href="#">メッセージ</a></li>
+          <li><a href="#">アカウント</a></li>
+       </div>
+      </nav>
     </footer>
   </body>
 </html>
